add watch endpoint
